--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.10.7",
     "nyc": "^15.1.0",
     "serverless-mocha-plugin": "^1.12.0",
+    "sib-api-v3-sdk": "^8.1.0",
     "validator": "^13.1.17"
   }
 }
