--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
   "dependencies": {
     "aws-sdk": "^2.462.0",
     "axios": "^0.20.0",
-    "fs": "0.0.2",
-    "mongoose": "^5.10.7",
     "nyc": "^15.1.0",
     "serverless-mocha-plugin": "^1.12.0",
-    "sib-api-v3-sdk": "^8.1.0",
-    "validator": "^13.1.17"
+    "sib-api-v3-sdk": "^8.1.0"
   }
 }
